@@ -56,6 +56,7 @@ depth: 1
  * Allow locale selection when creating a page at the root level (Sage Abdullah)
  * Ensure the admin login template correctly displays all `non_fields_errors` for any custom form validation (Sébastien Corbin)
  * Ensure 'mark as active' label in workflow bulk action set active form can be translated (Rohit Sharma)
+ * Ensure the panel title for a user's settings correctly reflects the `WAGTAIL_EMAIL_MANAGEMENT_ENABLED` setting by not showing 'email' if disabled (Omkar Jadhav)
 
 ### Documentation
 
